--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </body>
   <style>
     body {
-      background: url(/src/assets/portfoliobackground.JPG) no-repeat center center fixed;
+      background: url(./src/assets/portfoliobackground.jpg) no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
